# advent-of-code-2024

./: .envrc  .gitignore  Cargo.toml  LICENSE  flake.nix  justfile
daily-template/: Cargo.toml
daily-template/src/: part1.rs  part2.rs
day-01/: Cargo.toml
day-01/src/: part1.rs  part2.rs
day-02/: Cargo.toml
day-02/src/: part1.rs  part2.rs
scripts/: Cargo.toml
